# tskbm

./: .gitignore  README.md  db.sqlite  main.py  pyproject.toml  Бригады.7z
core/: crud.py
core/files/: views.py
core/times/: __init__.py  crud.py  times_models.py  views.py
core/users/: crud.py  views.py
core/watches/: crud.py
data_models/: __init__.py  models.py
db/: __init__.py  config.py  database.py
db/models/: tables.py
output_files/: data.xlsx
static/css/: mystyle.css
static/js/: index.js
templates/: base.html  forms.html  nav.html  page.html  temp.html
times/: crud.py  times_models.py
tskbm/: main.py  sqlite3.db
tskbm/api_v1/products/: crud.py  schemas.py  views.py
tskbm/core/: config.py
tskbm/core/models/: product.py
tskbm/users/: crud.py  models.py  views.py
users/: crud.py
