[tool.poetry]
name = "tskbm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">0.101.0"
uvicorn = {extras = ["standart"], version = "^0.28.0"}
pydantic = {extras = ["email"], version = "^2.6.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
